--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # db source url
-spring.datasource.url=jdbc:mysql://localhost:3306/sqldb?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://118.67.130.80:3306/sqldb?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 
 # db response name
-spring.datasource.username=root
+spring.datasource.username=admin
 
 # db response password
 spring.datasource.password=0000
